Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38201

Assertion `level != Sql_condition::WARN_LEVEL_ERROR' failed in void push_warning(THD*, Sql_state_errno_level::enum_warning_level, uint, const char*)

    XMLWordPrintable

Details

    • Not for ES Release Notes
    • Q1/2026 Galera Maintenance

    Description

      --source include/galera_cluster.inc
       
      --connection node_1
      CREATE TABLE t1 (f1 INT) ENGINE=InnoDB;
      SET GLOBAL wsrep_IGNORE_apply_errors=1;
      SET SESSION wsrep_dirty_reads=1;
      SHOW CREATE TABLE t1;
      FLUSH HOSTS;
      --ERROR ER_TABLE_EXISTS_ERROR
      CREATE TABLE t1 (f1 INT) ENGINE=InnoDB;
      FLUSH HOSTS;
      

      Leads to:

      ES 11.4.6-4 9cd12544ebfd0d52d2158af66b5aced58121cf1f (Debug) Build 06/05/2025

      mariadbd: /test/11.4-es_dbg/sql/sql_error.cc:750: void push_warning(THD*, Sql_state_errno_level::enum_warning_level, uint, const char*): Assertion `level != Sql_condition::WARN_LEVEL_ERROR' failed.
      

      ES 11.4.6-4 9cd12544ebfd0d52d2158af66b5aced58121cf1f (Debug) Build 06/05/2025

      Core was generated by `/test/GAL_EMD060525-mariadb-11.4.6-4-linux-x86_64-dbg/bin/mariadbd --defaults-f'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (Thread 0xb1efcdff6c0 (LWP 2573492))]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=6)at ./nptl/pthread_kill.c:89
      #3  0x000057d933106ab5 in my_write_core (sig=6)at /test/11.4-es_dbg/mysys/stacktrace.c:424
      #4  0x000057d9327daa39 in handle_fatal_signal (sig=6)at /test/11.4-es_dbg/sql/signal_handler.cc:298
      #5  <signal handler called>
      #6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #7  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #8  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #9  0x00000b1f0484527e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #10 0x00000b1f048288ff in __GI_abort () at ./stdlib/abort.c:79
      #11 0x00000b1f0482881b in __assert_fail_base (fmt=0xb1f049d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x57d9333ecd58 "level != Sql_condition::WARN_LEVEL_ERROR", file=file@entry=0x57d9333ec9f0 "/test/11.4-es_dbg/sql/sql_error.cc", line=line@entry=750, function=function@entry=0x57d9333ecd88 "void push_warning(THD*, Sql_state_errno_level::enum_warning_level, uint, const char*)") at ./assert/assert.c:96
      #12 0x00000b1f0483b517 in __assert_fail (assertion=0x57d9333ecd58 "level != Sql_condition::WARN_LEVEL_ERROR", file=0x57d9333ec9f0 "/test/11.4-es_dbg/sql/sql_error.cc", line=750, function=0x57d9333ecd88 "void push_warning(THD*, Sql_state_errno_level::enum_warning_level, uint, const char*)") at ./assert/assert.c:105
      #13 0x000057d93236fdd1 in push_warning (thd=0xb1e7c000d58, level=Sql_state_errno_level::WARN_LEVEL_ERROR, code=1213, msg=0xb1efcdfd5b0 "WSREP replication failed. Check your wsrep connection state and retry the query.") at /test/11.4-es_dbg/sql/sql_error.cc:750
      #14 0x000057d9323700a8 in push_warning_printf (thd=0xb1e7c000d58, level=Sql_state_errno_level::WARN_LEVEL_ERROR, code=1213, format=0x57d9336a2478 "WSREP replication failed. Check your wsrep connection state and retry the query.") at /test/11.4-es_dbg/sql/sql_error.cc:791
      #15 0x000057d932b5a139 in wsrep_TOI_begin (thd=0xb1e7c000d58, db=0x57d9333fb40a "mysql", table=0x0, table_list=0x0, alter_info=0x0, fk_tables=0x0, create_info=0x0)at /test/11.4-es_dbg/sql/wsrep_mysqld.cc:2991
      #16 0x000057d932b5c4ca in wsrep_to_isolation_begin (thd=0xb1e7c000d58, db_=0x57d9333fb40a "mysql", table_=0x0, table_list=0x0, alter_info=0x0, fk_tables=0x0, create_info=0x0)at /test/11.4-es_dbg/sql/wsrep_mysqld.cc:3496
      #17 0x000057d9323d0a3d in mysql_execute_command (thd=0xb1e7c000d58, is_called_from_prepared_stmt=false)at /test/11.4-es_dbg/sql/sql_parse.cc:5341
      #18 0x000057d9323d8ae3 in mysql_parse (thd=0xb1e7c000d58, rawbuf=0xb1e7c019dd0 "FLUSH HOSTS", length=11, parser_state=0xb1efcdfe2c0)at /test/11.4-es_dbg/sql/sql_parse.cc:7936
      #19 0x000057d9323d8053 in wsrep_mysql_parse (thd=0xb1e7c000d58, rawbuf=0xb1e7c019dd0 "FLUSH HOSTS", length=11, parser_state=0xb1efcdfe2c0)at /test/11.4-es_dbg/sql/sql_parse.cc:7746
      #20 0x000057d9323c537f in dispatch_command (command=COM_QUERY, thd=0xb1e7c000d58, packet=0xb1e7c00b149 "FLUSH HOSTS", packet_length=11, blocking=true) at /test/11.4-es_dbg/sql/sql_parse.cc:1898
      #21 0x000057d9323c3fe8 in do_command (thd=0xb1e7c000d58, blocking=true)at /test/11.4-es_dbg/sql/sql_parse.cc:1424
      #22 0x000057d9325aff4f in do_handle_one_connection (connect=0x57d9669d8f58, put_in_cache=true) at /test/11.4-es_dbg/sql/sql_connect.cc:1408
      #23 0x000057d9325afcfa in handle_one_connection (arg=0x57d9669d9758)at /test/11.4-es_dbg/sql/sql_connect.cc:1320
      #24 0x00000b1f0489caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #25 0x00000b1f04929c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      Galera Bug Detection Matrix

          Rel    o/d  Build   Commit                                    UniqueID observed             
      CS  10.5   dbg  210425  952ffb55f93bf6a6c5d1c9617e5a2a56207ee674  MARIADB_ERROR_CODE|MariaDB error code: 1050
      CS  10.5   opt  210425  952ffb55f93bf6a6c5d1c9617e5a2a56207ee674  No bug found                  
      CS  10.6   dbg  060525  c62671543976eb397576f1b57fb6817029bc21ee  MARIADB_ERROR_CODE|MariaDB error code: 1050
      CS  10.6   opt  150425  ee947fae80dc5f82d2c964cd0d8e897e9c244002  MARIADB_ERROR_CODE|MariaDB error code: 1050
      CS  10.11  dbg  210425  7d9660ed93c6bcf56a6dafd0872b27ac1709778a  No bug found                  
      CS  10.11  opt  210425  7d9660ed93c6bcf56a6dafd0872b27ac1709778a  MARIADB_ERROR_CODE|MariaDB error code: 1050
      CS  11.4   dbg  170325  38e420ba6e84ef6efc9c54b04ebd4dbc95dc3cae  No bug found                  
      CS  11.4   opt  170325  38e420ba6e84ef6efc9c54b04ebd4dbc95dc3cae  No bug found                  
      CS  11.8   dbg  150425  6bb92f98ce183ff3f3e7e36091bc914f62c75409  MARIADB_ERROR_CODE|MariaDB error code: 1050
      CS  11.8   opt  150425  6bb92f98ce183ff3f3e7e36091bc914f62c75409  No bug found                  
      CS  12.0   dbg  040325  3a81664cb80bfb1598d1a113f24a52f0a627b4f9  No bug found                  
      ES  10.5   dbg  060525  0d368ec0042a81d9549fc939fb742f82350b20ab  level != Sql_condition::WARN_LEVEL_ERROR|SIGABRT|push_warning|push_warning_printf|wsrep_TOI_begin|wsrep_to_isolation_begin                  
      ES  10.5   opt  060525  0d368ec0042a81d9549fc939fb742f82350b20ab  No bug found  
      ES  10.6   dbg  060525  6111fbaf7bdcb6f1170f556ffd05d6e1a4159f62  level != Sql_condition::WARN_LEVEL_ERROR|SIGABRT|push_warning|push_warning_printf|wsrep_TOI_begin|wsrep_to_isolation_begin                  
      ES  10.6   opt  060525  6111fbaf7bdcb6f1170f556ffd05d6e1a4159f62  No bug found                  
      ES  11.4   dbg  060525  9cd12544ebfd0d52d2158af66b5aced58121cf1f  level != Sql_condition::WARN_LEVEL_ERROR|SIGABRT|push_warning|push_warning_printf|wsrep_TOI_begin|wsrep_to_isolation_begin
      ES  11.4   opt  060525  9cd12544ebfd0d52d2158af66b5aced58121cf1f  No bug found                  
      

      Attachments

        Activity

          People

            janlindstrom Jan Lindström
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.