sql/wsrep_mysqld.cc
@@ -2848,9 +2848,10 @@ static int wsrep_TOI_begin(THD *thd, const char *db, const char *table,
     if (!wsrep_ready)
     {
       my_error(ER_GALERA_REPLICATION_NOT_SUPPORTED, MYF(0));
-      push_warning_printf(thd, Sql_state_errno_level::WARN_LEVEL_WARN,
+      push_warning_printf(thd, Sql_condition::WARN_LEVEL_WARN,
                           ER_GALERA_REPLICATION_NOT_SUPPORTED,
                           "Galera cluster is not ready to execute replication");
+      return -1;
     }
     return 1;
   }
@@ -2900,51 +2901,33 @@ static int wsrep_TOI_begin(THD *thd, const char *db, const char *table,
   if (ret)
   {
     DBUG_ASSERT(cs.current_error());
-    WSREP_DEBUG("to_execute_start() failed for %llu: %s, seqno: %lld",
-                thd->thread_id, wsrep_thd_query(thd),
-                (long long)wsrep_thd_trx_seqno(thd));
+    WSREP_WARN("TO isolation error %s for : %s.%s, sql: %s. ",
+               wsrep::to_c_string(cs.current_error()),
+               (db ? db : "(null)"),
+               (table ? table : " "),
+               wsrep_thd_query(thd));
 
     /* jump to error handler in mysql_execute_command() */
     switch (cs.current_error())
     {
     case wsrep::e_size_exceeded_error:
-      WSREP_WARN("TO isolation failed for: %d, schema: %s, sql: %s. "
-                 "Maximum size exceeded.",
-                 ret,
-                 (thd->db.str ? thd->db.str : "(null)"),
-                 wsrep_thd_query(thd));
       my_error(ER_UNKNOWN_ERROR, MYF(0), "Maximum writeset size exceeded");
       break;
     case wsrep::e_deadlock_error:
-      WSREP_WARN("TO isolation failed for: %d, schema: %s, sql: %s. "
-                 "Deadlock error.",
-                 ret,
-                 (thd->db.str ? thd->db.str : "(null)"),
-                 wsrep_thd_query(thd));
       my_error(ER_LOCK_DEADLOCK, MYF(0));
       break;
     case wsrep::e_timeout_error:
-      WSREP_WARN("TO isolation failed for: %d, schema: %s, sql: %s. "
-                 "Operation timed out.",
-                 ret,
-                 (thd->db.str ? thd->db.str : "(null)"),
-                 wsrep_thd_query(thd));
       my_error(ER_LOCK_WAIT_TIMEOUT, MYF(0));
       break;
     default:
-      WSREP_WARN("TO isolation failed for: %d, schema: %s, sql: %s. "
-                 "Check your wsrep connection state and retry the query.",
-                 ret,
-                 (thd->db.str ? thd->db.str : "(null)"),
-                 wsrep_thd_query(thd));
-
       if (!thd->is_error())
       {
-        push_warning_printf(thd, Sql_state_errno_level::WARN_LEVEL_ERROR,
-                            ER_LOCK_DEADLOCK,
-                            "WSREP replication failed. Check "
-                            "your wsrep connection state and retry the query.");
         my_error(ER_LOCK_DEADLOCK, MYF(0));
+        push_warning_printf(thd, Sql_condition::WARN_LEVEL_WARN,
+                            ER_LOCK_DEADLOCK,
+                            "WSREP replication failed with error %s. "
+                            "Check your wsrep connection state and retry the query.",
+                            wsrep::to_c_string(cs.current_error()));
       }
     }
     rc= -1;
